# roulette

./: .gitignore  Bankroll.h  CMakeLists.txt  README.md  Round.cpp  main.cpp
ElasticSearch/: docker-compose.yml  kibana-export.json
etl/: index.ts  package-lock.json  package.json  tsconfig.json
src/: Bankroll.cpp  Bankroll.h  Configuration.cpp  Configuration.h  Formatting.cpp  Formatting.h  PunctFacet.cpp  PunctFacet.h  Round.cpp  Round.h  Sample.cpp  Sample.h  Samplesize.cpp  Samplesize.h
